test/banana/typeck/should_pass/compatible_json_props_types.banana
a = { a.b: "test", a.c: "test" }

# TYPE_TABLE_EQ {Ident< a >: TypeObject < {a: TypeObject < {b: TypeString, c: TypeString} >} >}